Fix icon not showing in non-combined resources

--- a/src/resources/apps/fr/style/form-runner-bootstrap-override.less
+++ b/src/resources/apps/fr/style/form-runner-bootstrap-override.less
@@ -173,7 +173,7 @@ body.orbeon {
 
     // Force white icons on primary buttons icons
     .btn-danger i, .btn-warning i, .btn-primary i, .btn-inverse i {
-        background-image: url(/apps/fr/style/bootstrap/img/glyphicons-halflings-white.png)
+        background-image: url(bootstrap/img/glyphicons-halflings-white.png)
     }
 
     // NAV LIST
